@@ -1,0 +1,45 @@
+<?xml version="1.0"?>
+<project name ="calltarget-test" default="testinheritreffileset" basedir=".">
+    <property name="tmp.dir" value="tmp.dir" />
+    <target name="setup">
+        <mkdir dir="${tmp.dir}"/>
+    </target>
+    <target name="cleanup">
+        <delete dir="${tmp.dir}" quiet="true"/>
+    </target>
+    <target name="mytarget">
+      <pathconvert property="myproperty" targetos="unix" refid="myfileset"/>
+      <echo message="myproperty=${myproperty}"/>
+    </target>
+    <target name="testinheritreffileset">
+    <!-- this testcase should show that the fileset defined here
+    can be read in the called target -->
+      <fileset dir="." id="myfileset">
+        <include name="calltarget.xml"/>
+      </fileset>
+      <antcall target="mytarget" inheritrefs="true"/>
+    </target>
+    <target name="copytest2">
+       <copy file="${tmp.dir}/copytest.in" toFile="${tmp.dir}/copytest1.out" overwrite="true">
+          <filterset refid="foo"/>
+       </copy>
+    </target>
+    <target name="testinheritreffilterset" depends="setup">
+       <echo file="${tmp.dir}/copytest.in">@@foo@@</echo>
+       <filterset id="foo" begintoken="@@" endtoken="@@">
+          <filter token="foo" value="bar"/>
+       </filterset>
+       <antcall target="copytest2" inheritrefs="true"/>
+       <copy file="${tmp.dir}/copytest.in" toFile="${tmp.dir}/copytest2.out" overwrite="true">
+          <filterset refid="foo"/>
+       </copy>
+       <loadfile srcFile="${tmp.dir}/copytest2.out" property="copytest2"/>
+       <loadfile srcFile="${tmp.dir}/copytest1.out" property="copytest1"/>
+       <condition property="success">
+           <equals arg1="${copytest1}" arg2="${copytest2}"/>
+       </condition>
+       <fail message="filterset not properly passed across by antcall" unless="success"/>
+    </target>
+
+
+</project>
